--- a/theme/templates/resource-landing-page/coverage.html
+++ b/theme/templates/resource-landing-page/coverage.html
@@ -113,9 +113,9 @@
                             <h3>Coverage</h3>
                             {% if cm.resource_type == 'CompositeResource' %}
                                 <div id="readonly-coverage-notice" class="alert alert-warning alert-dismissible">
-                                    <span>You can set the spatial and temporal coverage manually by using the map to place a point or box or by filling in coordinates. Alternatively, you can add content files to your resource that have spatial coverage information (e.g., geographic
+                                    <em>You can set the spatial and temporal coverage manually by using the map to place a point or box or by filling in coordinates. Alternatively, you can add content files to your resource that have spatial coverage information (e.g., geographic
                                         feature, geographic raster, multidimensional, etc.) and then click the button to set the coverage from
-                                        the content files.</span>
+                                        the content files.</em>
                                 </div>
                             {% endif %}
                             <div id="readonly-coverage-notice" class="alert alert-warning alert-dismissible"
