--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -164,7 +164,7 @@
                             </span>
                             <ul class="dropdown-menu">
                                 <li id="btn-set-geo-file-type" data-menu-name="setgeorasterfiletype"
-                                    data-toggle="tooltip" data-placement="right" data-fb-action="setGeorasterFileType"
+                                    data-toggle="tooltip" data-placement="right" data-fb-action="setGeoRasterFileType"
                                     title="Convert GeoTiff files to a geographic raster dataset to which you can add metadata">
                                     <img src="{{ STATIC_URL }}img/resource-icons/geographicraster48x48.png"
                                      alt="Geographic Raster Resource Icon" class="resource-type-icon"/>
