--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -156,6 +156,11 @@
                     </li>
                     <li role="separator" class="divider"></li>
                     {% if page.perms.change and resource_edit_mode and cm.resource_type == "CompositeResource"%}
+                        <li id="btn-set-generic-file-type" data-fb-action="setGenericFileType" data-toggle="tooltip"
+                            title="Add metadata to an individual file" data-placement="right">
+                            <i class="fa fa-plus icon-green" aria-hidden="true"></i>
+                            <span>Add metadata to file</span>
+                        </li>
                         <li class="dropdown-submenu submenu-trigger">
                             <span tabindex="-1" class="">
                                 <i class="fa fa-exchange icon-blue" aria-hidden="true"></i>
@@ -199,11 +204,6 @@
                                     <span>Time Series</span>
                                 </li>
                             </ul>
-                        </li>
-                        <li id="btn-set-generic-file-type" data-fb-action="setGenericFileType" data-toggle="tooltip"
-                            title="Add metadata to an individual file" data-placement="right">
-                            <span class="glyphicon glyphicon-check icon-blue"></span>
-                            <span>Add metadata to file</span>
                         </li>
                         <li id="btn-remove-aggregation" data-fb-action="removeAggregation" data-toggle="tooltip"
                             title="Remove the content type association and delete content-level metadata"
