File browser list view fix for items cut off

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -349,8 +349,7 @@
                              data-allow-multiple-files="{{ cm.allow_multiple_file_upload }}"
                              data-initial-file-count="{{ cm.files.all.count }}"
                              {% if cm.resource_type != "CompositeResource" %}data-refresh-on-upload="true"{% endif %}
-                             class="file-browser"
-                        >
+                             class="file-browser">
 
                             <div class="file-browser-container">
                                 <div id="fb-inner-controls">
