--- a/theme/templates/resource-landing-page/highlights.html
+++ b/theme/templates/resource-landing-page/highlights.html
@@ -54,11 +54,7 @@
     <tr class="info-collapsible">
         <th class="text-center"><i class="fa fa-comments-o" aria-hidden="true"></i></th>
         <td>
-            <span><a href="#comments">Comments:&nbsp;&nbsp;</a></span>{{ cm.comments_count }}
+            <span><a href="#comments">Comments</a>:&nbsp;&nbsp;{{ cm.comments_count }}</span>
         </td>
     </tr>
-{#    <tr class="info-collapsible">#}
-{#        <td class="text-center"><i class="fa fa-quote-right" aria-hidden="true"></i></td>#}
-{#        <td><a href="#citation">Cite this resource</a></td>#}
-{#    </tr>#}
 </table>
