--- a/theme/templates/includes/profile-card.html
+++ b/theme/templates/includes/profile-card.html
@@ -3,22 +3,20 @@
         <div class="flex">
             <div>
                 <div class="dropdown-profile-pic-thumbnail round-image dropdown-user-icon"></div>
-                <a href="#" class="btn btn-info btn-block" title="View Profile" data-url>Profile</a>
+{#                <a href="#" class="btn btn-info btn-block" title="View Profile" data-url>Profile</a>#}
 
                 <div class="contributions-wrapper">
-                    <br>
-                    <small class="text-muted">Contributions</small>
-                    <div data-contributions></div>
+                    <small>Contributions</small><br>
+                    <div class="label label-default" data-contributions></div>
                 </div>
 
                 <div class="joined-wrapper">
-                    <br>
-                    <small class="text-muted">Joined</small>
-                    <div data-joined></div>
+                    <small>Joined</small>
+                    <div data-joined class="label label-default"></div>
                 </div>
             </div>
             <div style="flex-grow: 1;">
-                <h3 style="margin-top: 0;"><a href="#" title="View Profile" data-name></a></h3>
+                <h4 style="margin-top: 0;"><a href="#" title="View Profile" data-name></a></h4>
 
                 <table>
                     <tr class="email-wrapper">
@@ -31,20 +29,14 @@
                     </tr>
                 </table>
 
-                <br>
-
                 <div class="org-wrapper separate">
                     <span data-organization></span><span data-title></span>
                 </div>
-
-                <br>
 
                 <div class="subjectareas-wrapper">
                     <small class="text-muted">Subject Areas:</small>
                     <div data-subjectareas></div>
                 </div>
-
-                <br>
 
                 <div class="externalprofiles-wrapper">
                     <small class="text-muted">External Profiles:</small>
